[gd_scene load_steps=7 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/inventory-background.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/inventory-grid.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/light-mask.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource_name = "HideCharSheet"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSheetPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( -220, 100 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "ShowCharSheet"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSheetPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -220, 100 ), Vector2( 0, 100 ) ]
}

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}

[node name="CharacterSheetPanel" type="Panel" parent="." index="0"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -220.0
margin_top = 100.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="TabContainer" type="TabContainer" parent="CharacterSheetPanel" index="0"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 0
tabs_visible = true

[node name="Attributes" type="PanelContainer" parent="CharacterSheetPanel/TabContainer" index="0"]

editor/display_folded = true
visible = false
light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSheetPanel/TabContainer/Attributes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 205.0
margin_bottom = 357.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="GridContainer" type="GridContainer" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer" index="0"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 198.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Visibility" ]

[node name="NameLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer" index="0"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 42.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="NameValueLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer" index="1"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 110.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Carl Corey"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="LevelLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer" index="2"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 38.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Level:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="LeveValuelLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer" index="3"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_top = 18.0
margin_right = 62.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "18"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="HSeparator" type="HSeparator" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer" index="1"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 198.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="GridContainer2" type="GridContainer" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer" index="2"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 198.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Visibility" ]

[node name="StrengthLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer2" index="0"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 57.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Strength:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="StrengthValueLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer2" index="1"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_right = 100.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "18"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="DexterityLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer2" index="2"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 63.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Dexterity:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="DexterityValueLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer2" index="3"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "18"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="Intelligence" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer2" index="4"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 80.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Intelligence:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="IntelligenceValueLabel" type="Label" parent="CharacterSheetPanel/TabContainer/Attributes/VBoxContainer/GridContainer2" index="5"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 36.0
margin_right = 100.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "18"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="Inventory" type="PanelContainer" parent="CharacterSheetPanel/TabContainer" index="1"]

light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSheetPanel/TabContainer/Inventory" index="0"]

editor/display_folded = true
light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 211.0
margin_bottom = 389.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Visibility" ]

[node name="BodyPanel" type="TextureRect" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer" index="0"]

editor/display_folded = true
light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 204.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="SlotHead" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/BodyPanel" index="0"]

light_mask = 1024
position = Vector2( 97, 37 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="SlotTorso" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/BodyPanel" index="1"]

light_mask = 1024
position = Vector2( 97, 93 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="SlotLeftArm" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/BodyPanel" index="2"]

light_mask = 1024
position = Vector2( 153, 101 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="SlotRightArm" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/BodyPanel" index="3"]

light_mask = 1024
position = Vector2( 41, 101 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="SlotLegs" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/BodyPanel" index="4"]

light_mask = 1024
position = Vector2( 97, 149 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="SlotFeet" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/BodyPanel" index="5"]

light_mask = 1024
position = Vector2( 97, 205 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="InventoryScroll" type="ScrollContainer" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer" index="1"]

editor/display_folded = true
light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 244.0
margin_right = 204.0
margin_bottom = 382.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Size Flags" ]

[node name="TextureRect" type="TextureRect" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll" index="2"]

editor/display_folded = true
light_mask = 1024
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Slot-1x1" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="0"]

light_mask = 1024
position = Vector2( 25, 25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-1x2" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="1"]

light_mask = 1024
position = Vector2( 73, 25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-1x3" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="2"]

light_mask = 1024
position = Vector2( 121, 25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-1x4" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="3"]

light_mask = 1024
position = Vector2( 169, 25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-2x1" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="4"]

light_mask = 1024
position = Vector2( 25, 73 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-2x2" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="5"]

light_mask = 1024
position = Vector2( 73, 73 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-2x3" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="6"]

light_mask = 1024
position = Vector2( 121, 73 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-2x4" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="7"]

light_mask = 1024
position = Vector2( 169, 73 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-3x1" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="8"]

light_mask = 1024
position = Vector2( 25, 121 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-3x2" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="9"]

light_mask = 1024
position = Vector2( 73, 121 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-3x3" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="10"]

light_mask = 1024
position = Vector2( 121, 121 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-3x4" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="11"]

light_mask = 1024
position = Vector2( 169, 121 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-4x1" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="12"]

light_mask = 1024
position = Vector2( 25, 169 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-4x2" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="13"]

light_mask = 1024
position = Vector2( 73, 169 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-4x3" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="14"]

light_mask = 1024
position = Vector2( 121, 169 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-4x4" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="15"]

light_mask = 1024
position = Vector2( 169, 169 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-5x1" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="16"]

light_mask = 1024
position = Vector2( 25, 217 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-5x2" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="17"]

light_mask = 1024
position = Vector2( 73, 217 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-5x3" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="18"]

light_mask = 1024
position = Vector2( 121, 217 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Slot-5x4" type="Sprite" parent="CharacterSheetPanel/TabContainer/Inventory/VBoxContainer/InventoryScroll/TextureRect" index="19"]

light_mask = 1024
position = Vector2( 169, 217 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="CharacterSheetLight2D" type="Light2D" parent="." index="1"]

position = Vector2( 100, 300 )
enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 2.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1024
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1024
_sections_unfolded = [ "Range", "Shadow", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/HideCharSheet = SubResource( 1 )
anims/ShowCharSheet = SubResource( 2 )
blend_times = [  ]


